Fix for WMS-13158 Nav widget in leftnav/rightnav, the alignment for parent node is not proper. Also UI is not proper when child element is selected

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -598,6 +598,13 @@ body {
       &.nav-tabs {
         border-color: transparent;
       }
+      &.nav-pills.nav-stacked > li {
+        display: inline-block;
+        width: 100%;
+        > .dropdown.open > .dropdown-menu {
+          margin: 0;
+        }
+      }
     }
   }
   /*********************application right panel********************/
